--- a/assets/style-viewcontact.css
+++ b/assets/style-viewcontact.css
@@ -15,10 +15,32 @@ body {
     font-family: 'Oleo script';
 }
 .navbar {
-    background-color:linear-gradient(108deg, #cff4de 0%, #eafff3 100%) !important;
+    background-color: linear-gradient(108deg, #cff4de 0%, #eafff3 100%) !important;
     font-family: 'abril fatface';
-    font-weight:bolder;
+    font-weight: bolder;
+    color: rgba(11, 79, 9, 0.773);  
+}
+.navbar-nav{
+    position: relative;
+    margin-left:50%;
+    font-weight: bold;
     color:rgba(11, 79, 9, 0.773);  
+    font-size: larger;
+}
+.navbar-brand {
+    position: relative;
+    margin-left: 2%;
+    font-weight: bolder;
+    font-size: xx-large;
+    font-family: 'Great vibes', cursive;
+    color: transparent;
+    background-image: linear-gradient(to right, black, #025c80);
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+
+.nav-link {
+    color: black;
 }
 h1 {
     text-align: center;
