--- a/assets/style-deletecontact.css
+++ b/assets/style-deletecontact.css
@@ -4,34 +4,7 @@ body {
     padding: 0;
     background: linear-gradient(108deg, #cff4de 0%, #eafff3 100%);
 }
-.navbar {
-    background-color: linear-gradient(108deg, #cff4de 0%, #eafff3 100%) !important;
-    font-family: 'abril fatface';
-    font-weight: bolder;
-    color: rgba(11, 79, 9, 0.773);  
-}
-.navbar-nav{
-    position: relative;
-    margin-left:50%;
-    font-weight: bold;
-    color:rgba(11, 79, 9, 0.773);  
-    font-size: larger;
-}
-.navbar-brand {
-    position: relative;
-    margin-left: 2%;
-    font-weight: bolder;
-    font-size: xx-large;
-    font-family: 'Great vibes', cursive;
-    color: transparent;
-    background-image: linear-gradient(to right, black, #025c80);
-    -webkit-background-clip: text;
-    background-clip: text;
-}
 
-.nav-link {
-    color: black;
-}
 .container {
     max-width: 800px;
     margin: 20px auto;
@@ -39,7 +12,7 @@ body {
     background: linear-gradient(108deg, #cff4de 0%, #eafff3 100%);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    font-family: 'Oleo Script', cursive;
+    font-family: 'Oleo Script';
 }
 
 h1 {
@@ -75,4 +48,19 @@ h1 {
 
 .contact p {
     margin: 5px 0;
+}
+.deleteBtn {
+    background-color: #023d54;
+    color: white;
+    border: none; 
+    padding: 10px 20px; 
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    background-image: linear-gradient(45deg, #0272a9, #025c80); 
+    text-decoration: none;
+}
+
+.deleteBtn:hover {
+    background-image: linear-gradient(45deg, #025c80, #0272a9);
+    cursor: pointer; 
 }
