--- a/assets/style-deletecontact.css
+++ b/assets/style-deletecontact.css
@@ -4,11 +4,23 @@ body {
     padding: 0;
     background: linear-gradient(108deg, #cff4de 0%, #eafff3 100%);
 }
+.container {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background: linear-gradient(108deg, #cff4de 0%, #eafff3 100%);
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-family: 'Oleo Script';
+}
 
-<<<<<<< Updated upstream
-=======
-.nav-link {
-    color: black;
+h1 {
+    text-align: center;
+    color: transparent; 
+    font-family: 'Great Vibes', cursive;
+    background-image: linear-gradient(to right, black, #025c80); 
+    -webkit-background-clip: text; 
+    background-clip: text; 
 }
 .navbar {
     background-color:linear-gradient(108deg, #cff4de 0%, #eafff3 100%) !important;
@@ -28,31 +40,17 @@ body {
     background-clip: text; /
 }
 
-
+.navbar-nav{
+    position: relative;
+    margin-left:50%;
+    font-weight: bold;
+    color:rgba(11, 79, 9, 0.773);  
+    font-size: larger;
+}
 
 .nav-link{
     color:black;
 }
->>>>>>> Stashed changes
-.container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background: linear-gradient(108deg, #cff4de 0%, #eafff3 100%);
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    font-family: 'Oleo Script';
-}
-
-h1 {
-    text-align: center;
-    color: transparent; 
-    font-family: 'Great Vibes', cursive;
-    background-image: linear-gradient(to right, black, #025c80); 
-    -webkit-background-clip: text; 
-    background-clip: text; 
-}
-
 .contact {
     margin-bottom: 20px;
     padding: 15px;
